# diary-header

./: .gitignore  .npmignore  Cargo.toml  LICENSE  NPM_PUBLISH.md  README.md  build.rs  install.js  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: main.rs
templates/: en.tera  ja.tera
