[package]
name = "diary-header"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
cities = "0.2.0"
clap = { version = "4.5.60", features = ["derive"] }
directories = "6.0.0"
dirs = "6.0.0"
inquire = { version = "0.7.5", features = ["date"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sunrise = "1.2"
toml = "1.0.3"
tzf-rs = "1.1.5"
